--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,3 @@
-
 html {
     margin: 0;
 }
@@ -28,6 +27,28 @@ body {
     border: 1px solid #ddd;
     border-radius: 6px;
     margin-bottom: 10px;
+}
+
+.clock .value {
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 15px;
+}
+
+.clock .icon {
+    display: inline-block;
+    vertical-align: middle;
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+}
+
+.clock .icon.day {
+    background-color: #ef7b00;
+}
+
+.clock .icon.night {
+    background-color: #2459a7;
 }
 
 .lot {
